--- a/.github/workflows/save.yml
+++ b/.github/workflows/save.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Install RPostgreSQL package
         run: Rscript -e 'install.packages("RPostgreSQL", dependencies = TRUE)'
       - name: Run The R Script
-        run: Rscript save.R
+        run: Rscript saveJagat.R
