--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: Publish
 
 on:
   schedule:
-    - cron: '10 * * * *'  # twice every hour.
+    - cron: '0 12 * * *'  # once every 12 hour
 
 jobs:
   publish-data:
